testdata/baselines/reference/submodule/compiler/moduleResolutionWithSuffixes_one_externalModule_withPaths.errors.txt
/tsconfig.json(9,3): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.


==== /tsconfig.json (1 errors) ====
    {
    	"compilerOptions": {
    		"allowJs": true,
    		"checkJs": false,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"],
    		"baseUrl": "/",
    		~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
    		"paths": {
    			"some-library": ["node_modules/some-library/lib"],
    			"some-library/*": ["node_modules/some-library/lib/*"]
    		}
    	}
    }
    
==== /test.ts (0 errors) ====
    import { ios } from "some-library";
    import { ios as ios2 } from "some-library/index";
    import { ios as ios3 } from "some-library/index.js";
    
==== /node_modules/some-library/lib/index.ios.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function ios() {}
    exports.ios = ios;
==== /node_modules/some-library/lib/index.ios.d.ts (0 errors) ====
    export declare function ios(): void;
==== /node_modules/some-library/lib/index.js (0 errors) ====
    "use strict";
    exports.__esModule = true;
    function base() {}
    exports.base = base;
==== /node_modules/some-library/lib/index.d.ts (0 errors) ====
    export declare function base(): void;
    